--- a/project_maven/pom.xml
+++ b/project_maven/pom.xml
@@ -31,6 +31,14 @@
       <artifactId>guava</artifactId>
       <version>26.0-jre</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.11.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
